# soho-unlock

./: Cargo.toml  Cross.toml  Makefile  build.rs  config.example.toml  install.sh
.github/workflows/: release.yml
panel/: app.js  index.html  style.css
proto/: agent.proto
src/: capture.rs  config.rs  dns.rs  export.rs  firewall.rs  grpc_client.rs  main.rs  panel.rs  rules.rs  service.rs  sni.rs  socks5.rs  socks_sync.rs  state.rs  sysdns.rs  upstream.rs
