[package]
name = "soho-unlock"
version = "0.2.19"
edition = "2021"
description = "Lightweight DNS unlock agent with SNI proxy and micro panel"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "signal", "fs", "process"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
aho-corasick = "1"
ipnet = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
arc-swap = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
prost = "0.13"
tokio-stream = "0.1"
maxminddb = { version = "0.24", optional = true }

[features]
default = []
asn = ["maxminddb"]

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
